--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "App/Helper/Helpers.php"
+            "app/Helper/Helpers.php"
         ]
     },
     "autoload-dev": {
